se realizan modificaciones a objetos fichero, y llave para que esta se adicione a la scena de manera aleatoria

--- a/Bomberman/imagenes.qrc
+++ b/Bomberman/imagenes.qrc
@@ -5,5 +5,6 @@
         <file>imagenes/bomberman.png</file>
         <file>imagenes/bomb.png</file>
         <file>imagenes/fire.png</file>
+        <file>imagenes/puerta.PNG</file>
     </qresource>
 </RCC>
